<resources>
    <string name="app_name">Restaurant Móvil</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="background">Background</string>

    <!-- Strings Login -->
    <string name="login_tv_usuario">Usuario:</string>
    <string name="login_tv_password">Password:</string>
    <string name="login_btn_login">Log in</string>


    <!-- Strings NavigationDrawer -->
    <string name="string_nav_alimento">Alimento</string>
    <string name="string_nav_empleado">Empleado</string>
    <string name="string_nav_mesa">Mesas</string>
    <string name="string_nav_orden">Orden/Comanda</string>
    <string name="string_nav_reporte">Reporte</string>
    <string name="string_nav_cambiar_mesero">Cambiar Mesero</string>
    <string name="string_nav_salir">Salir</string>

    <!-- Strings AlimentoFragment -->
    <string-array name="alimento_categorias">
        <item>Comida</item>
        <item>Bebida</item>
        <item>Postre</item>
    </string-array>

    <!-- String EmpleadoFragment -->
    <string-array name="empleado_puesto">
        <item>Mesero</item>
        <item>Administrador</item>
    </string-array>

</resources>