<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/nav_grupo_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alimento"
            android:icon="@drawable/ic_alimento"
            android:title="@string/string_nav_alimento"/>
        <item
            android:id="@+id/nav_empleado"
            android:icon="@drawable/ic_empleado"
            android:title="@string/string_nav_empleado"/>
        <item
            android:id="@+id/nav_mesas"
            android:icon="@drawable/ic_mesa"
            android:title="@string/string_nav_mesa"/>
    </group>
    <group
        android:id="@+id/nav_grupo_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orden"
            android:icon="@drawable/ic_reporte"
            android:title="@string/string_nav_orden" />
        <item
            android:id="@+id/nav_reporte"
            android:icon="@drawable/ic_reporte"
            android:title="@string/string_nav_reporte" />
    </group>
    <group
        android:id="@+id/nav_grupo_3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cambiar_mesero"
            android:icon="@drawable/ic_cambiar_mesero"
            android:title="@string/string_nav_cambiar_mesero" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_salir"
            android:title="@string/string_nav_salir" />
    </group>
</menu>